@@ -1,33 +1,27 @@
 package net.deckserver.dwr.bean;
 
-import net.deckserver.dwr.model.JolAdmin;
+import lombok.Getter;
+import net.deckserver.JolAdmin;
 import net.deckserver.dwr.model.PlayerModel;
+import net.deckserver.game.enums.GameFormat;
+import net.deckserver.storage.json.deck.ExtendedDeck;
 
-import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Getter
 public class DeckPageBean {
 
-    private final List<DeckInfoBean> decks;
-    private SelectedDeckBean selectedDeck;
+    private final ExtendedDeck selectedDeck;
+    private final String contents;
+    private final List<String> tags;
+    private final String deckFilter;
 
     public DeckPageBean(PlayerModel model) {
         String playerName = model.getPlayerName();
-        this.decks = JolAdmin.INSTANCE.getDeckNames(playerName).stream()
-                .map(deckName -> new DeckInfoBean(playerName, deckName))
-                .sorted(Comparator.comparing(DeckInfoBean::getName, String.CASE_INSENSITIVE_ORDER))
-                .collect(Collectors.toList());
-        if (model.getContents() != null) {
-            selectedDeck = new SelectedDeckBean(model);
-        }
+        this.selectedDeck = model.getDeck();
+        this.contents = model.getContents();
+        this.tags = JolAdmin.getAvailableGameFormats(playerName).stream().map(GameFormat::getLabel).toList();
+        this.deckFilter = model.getDeckFilter();
     }
 
-    public List<DeckInfoBean> getDecks() {
-        return decks;
-    }
-
-    public SelectedDeckBean getSelectedDeck() {
-        return selectedDeck;
-    }
 }
