@@ -1,8 +1,14 @@
 package net.deckserver.dwr.bean;
 
 import lombok.Getter;
-import net.deckserver.dwr.model.JolAdmin;
+import net.deckserver.JolAdmin;
+import net.deckserver.game.enums.DeckFormat;
+import net.deckserver.game.enums.GameFormat;
+import net.deckserver.services.DeckService;
+import net.deckserver.services.PlayerService;
+import net.deckserver.services.RegistrationService;
 
+import java.time.OffsetDateTime;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
@@ -13,46 +19,59 @@ public class LobbyPageBean {
     private final List<String> players;
     private final List<GameStatusBean> myGames;
     private final List<GameStatusBean> publicGames;
-    private final List<RegistrationStatus> invitedGames;
+    private final List<GameInviteStatus> invitedGames;
     private final List<DeckInfoBean> decks;
     private final String message;
+    private final boolean playtester;
+    private final List<String> gameFormats;
 
     public LobbyPageBean(String player) {
-        JolAdmin admin = JolAdmin.INSTANCE;
+        OffsetDateTime currentMonth = OffsetDateTime.now().minusMonths(1);
 
-        players = admin.getPlayers().stream().sorted().collect(Collectors.toList());
+        playtester = JolAdmin.isPlaytester(player);
+        gameFormats = JolAdmin.getAvailableGameFormats(player).stream().map(GameFormat::getLabel).toList();
 
-        myGames = admin.getGames().stream()
+        players = PlayerService.getPlayers().stream()
+                .sorted()
+                .map(PlayerActivityStatus::new)
+                .filter(playerActivityStatus -> playerActivityStatus.online().isAfter(currentMonth))
+                .sorted(Comparator.comparing(PlayerActivityStatus::getLastOnline))
+                .map(PlayerActivityStatus::getName)
+                .collect(Collectors.toList());
+
+        myGames = JolAdmin.getGameNames().stream()
                 .filter(Objects::nonNull)
-                .filter(admin::isPrivate)
-                .filter(gameName -> player.equals(admin.getOwner(gameName)))
+                .filter(JolAdmin::isPrivate)
+                .filter(gameName -> JolAdmin.isViewable(gameName, player))
+                .filter(gameName -> player.equals(JolAdmin.getOwner(gameName)))
                 .map(GameStatusBean::new)
                 .collect(Collectors.toList());
 
-        publicGames = admin.getGames().stream()
+        publicGames = JolAdmin.getGameNames().stream()
                 .filter(Objects::nonNull)
-                .filter(admin::isStarting)
-                .filter(admin::isPublic)
+                .filter(JolAdmin::isStarting)
+                .filter(JolAdmin::isPublic)
+                .filter(gameName -> JolAdmin.isViewable(gameName, player))
                 .map(GameStatusBean::new)
-                .sorted(Comparator.comparing(GameStatusBean::getCreated))
+                .sorted(Comparator.comparing(GameStatusBean::getFormat).thenComparing(GameStatusBean::getCreated))
                 .collect(Collectors.toList());
 
-        invitedGames = admin.getGames().stream()
+        invitedGames = JolAdmin.getGameNames().stream()
                 .filter(Objects::nonNull)
-                .filter(admin::isStarting)
-                .filter(gameName -> admin.isInGame(gameName, player))
-                .map(gameName -> new RegistrationStatus(gameName, player))
+                .filter(JolAdmin::isStarting)
+                .filter(gameName -> RegistrationService.isInGame(gameName, player))
+                .map(gameName -> new GameInviteStatus(gameName, player))
                 .collect(Collectors.toList());
 
-        decks = admin.getDeckNames(player).stream()
+        decks = DeckService.getPlayerDeckNames(player).stream()
                 .filter(Objects::nonNull)
                 .map(deckName -> new DeckInfoBean(player, deckName))
-                .filter(deckInfoBean -> deckInfoBean.getDeckFormat().equals("MODERN"))
-                .filter(deckInfoBean -> admin.isValid(player, deckInfoBean.getName()))
+                .filter(deckInfoBean -> !deckInfoBean.getDeckFormat().equals(DeckFormat.LEGACY.toString()))
                 .sorted(Comparator.comparing(DeckInfoBean::getName, String.CASE_INSENSITIVE_ORDER))
                 .collect(Collectors.toList());
 
-        message = JolAdmin.INSTANCE.getPlayerModel(player).getMessage();
+        message = JolAdmin.getPlayerModel(player).getMessage();
+
     }
 
 }
